# identa-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  identa.toml.example  pyproject.toml
docs/: CALIBRATION_MODES.md  quickstart.md
scripts/: benchmark.py  generate_domain_questions.py  verify_calibration.py
src/identa/: __init__.py  __main__.py
src/identa/_internal/: console.py  telemetry.py
src/identa/_internal/prompts/: adapter.py  mapping_extractor.py  reflection.py
src/identa/calibration/: cache.py  drift.py  engine.py  evolver.py  island.py  reflection.py  scorer.py  types.py
src/identa/cli/: app.py  calibrate.py  config_cmd.py  drift.py  init_cmd.py  migrate.py  store.py  tasks.py
src/identa/config/: defaults.py  loader.py  settings.py
src/identa/drift/: analyzer.py  metrics.py  report.py
src/identa/parser/: base.py  detector.py  dspy.py  json_messages.py  langchain.py  raw_text.py  yaml_template.py
src/identa/providers/: anthropic.py  base.py  google.py  litellm_adapter.py  mistral.py  ollama.py  openai.py  openrouter.py  rate_limiter.py  registry.py
src/identa/store/: base.py  models.py  sqlite_store.py
src/identa/tasks/: domains.py  generator.py  loader.py  registry.py  schema.py
src/identa/tasks/builtin/: code_contests.json  synthetic_code.json
src/identa/tasks/builtin/domains/: business_analyst_questions.json  general_assistant_questions.json  marketing_expert_questions.json  software_developer_questions.json
src/identa/transfer/: adapter.py  engine.py  knowledge.py  mapping_extractor.py  types.py
tests/: conftest.py
tests/unit/: test_engine.py  test_parser.py  test_scorer.py
