[project]
name = "identa-agent"
version = "2.0.0"
description = "Cross-model prompt migration CLI tool"
readme = "README.md"
authors = [
    { name = "Identa Author" },
]
license = { text = "Apache-2.0" }
keywords = ["prompt-engineering", "llm", "calibration", "migration", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "openai>=1.40",
    "anthropic>=0.35",
    "litellm>=1.40",
    "aiohttp>=3.9",
    "tomli>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
google = ["google-genai>=0.5.0"]
mistral = ["mistralai>=1.0"]
langchain = ["langchain-core>=0.2"]
dspy = ["dspy-ai>=2.4"]

[project.scripts]
identa = "identa.cli.app:main"

[project.urls]
Homepage = "https://github.com/srodriguez/identa-agent"
Repository = "https://github.com/srodriguez/identa-agent"
Issues = "https://github.com/srodriguez/identa-agent/issues"
Changelog = "https://github.com/srodriguez/identa-agent/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/identa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "benchmark: paper reproduction benchmarks (slow, requires API keys)",
    "slow: tests that take >30s",
]
